--- a/.github/ISSUE_TEMPLATE/баг.md
+++ b/.github/ISSUE_TEMPLATE/баг.md
@@ -24,6 +24,13 @@ assignees: ''
 ОС [Windows, Linux, MacOS]
 Версия сборки '...'
 
+**Логи**
+Перейдите в папку logs и отправьте нам
+1. kubejs/server.log (если баг связан с игровым процессом)
+2. kubejs/startup.log (если у вас не запустилась сборка)
+3. kubejs/client.log (если баг никак не влияет на игровой процесс)
+4. latest.log (если игра вылетела)
+
 
 **Дополнительная информация**
 Добавьте любую дополнительную информацию о вашей проблеме здесь.
